Importing graph from ctafor data.

--- a/core/db.properties
+++ b/core/db.properties
@@ -1,11 +1,17 @@
-# remoto - nuvem arida 
+# remoto - arida antigo 
+# driver=org.postgresql.Driver
+# host=jdbc:postgresql://177.130.199.157:8080/fortaleza
+# user=postgres
+# password=aridapostgres12
+
+# remoto - arida novo
 #driver=org.postgresql.Driver
-#host=jdbc:postgresql://arida1.mooo.com:8080/fortaleza
+#host=jdbc:postgresql://200.129.44.238:8080/amc
 #user=postgres
 #password=aridapostgres12
 
 #local
 driver=org.postgresql.Driver
-host=jdbc:postgresql://localhost:5432/fortaleza_novo
+host=jdbc:postgresql://localhost:5432/postgres
 user=postgres
-password=postgres
+password=senha
