--- a/core/pom.xml
+++ b/core/pom.xml
@@ -10,35 +10,35 @@
 	<url>https://github.com/ARiDa/graphast</url>
 
 	<repositories>
-	    <repository>
-	      <id>maven-repo</id>
-	      <url>http://arida.github.io/maven-repo/</url>
-	    </repository>
-	    
+		<repository>
+			<id>maven-repo</id>
+			<url>http://arida.github.io/maven-repo/</url>
+		</repository>
+
 	</repositories>
-	
+
 	<licenses>
-    		<license>
-      			<name>GNU Lesser General Public License (LGPL), Version 2.1</name>
-      			<url>http://www.fsf.org/licensing/licenses/lgpl.txt</url>
-      			<distribution>repo</distribution>
-    		</license>
-  	</licenses>
+		<license>
+			<name>GNU Lesser General Public License (LGPL), Version 2.1</name>
+			<url>http://www.fsf.org/licensing/licenses/lgpl.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
 
 	<scm>
-    		<connection>scm:git:git://github.com/ARiDa/graphast.git</connection>
-    		<url>https://github.com/ARiDa/graphast.git</url>
-    		<developerConnection>https://github.com/ARiDa/graphast.git</developerConnection>
+		<connection>scm:git:git://github.com/ARiDa/graphast.git</connection>
+		<url>https://github.com/ARiDa/graphast.git</url>
+		<developerConnection>https://github.com/ARiDa/graphast.git</developerConnection>
 	</scm>
 
 	<developers>
 		<developer>
 			<id>graphast</id>
 			<name>Graphast</name>
-		</developer>	
+		</developer>
 	</developers>
-	
-	<properties> 
+
+	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
@@ -47,6 +47,12 @@
 			<groupId>com.graphhopper</groupId>
 			<artifactId>graphhopper</artifactId>
 			<version>0.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.graphast</groupId>
+			<artifactId>graphast-core</artifactId>
+			<version>0.1.8</version>
 		</dependency>
 
 		<dependency>
@@ -72,31 +78,31 @@
 			<artifactId>osmpoispbf</artifactId>
 			<version>1.1</version>
 		</dependency>
-		
+
 		<dependency>
-		    <groupId>com.github.davidmoten</groupId>
-		    <artifactId>rtree</artifactId>
-		    <version>0.6.9</version>
+			<groupId>com.github.davidmoten</groupId>
+			<artifactId>rtree</artifactId>
+			<version>0.6.9</version>
 		</dependency>
 
-		 <dependency>
+		<dependency>
 			<groupId>postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<version>9.1-901-1.jdbc4</version>
 		</dependency>
-		
-		 <dependency>
+
+		<dependency>
 			<groupId>org.postgis</groupId>
 			<artifactId>postgis-jdbc</artifactId>
 			<version>1.3.3</version>
 		</dependency>
-		
-		 <dependency>
+
+		<dependency>
 			<groupId>org.apache.commons</groupId>
-			  <artifactId>commons-lang3</artifactId>
+			<artifactId>commons-lang3</artifactId>
 			<version>3.4</version>
 		</dependency>
-		 
+
 	</dependencies>
 
 	<build>
@@ -144,41 +150,31 @@
 					</execution>
 				</executions>
 			</plugin>
-			
-<!-- 
+
+			<!-- <plugin> <artifactId>maven-gpg-plugin</artifactId> <version>1.6</version> 
+				<executions> <execution> <phase>package</phase> <goals> <goal>sign</goal> 
+				</goals> </execution> </executions> </plugin> -->
 			<plugin>
-	        	<artifactId>maven-gpg-plugin</artifactId>
-	        	<version>1.6</version>
-	        	<executions>
-	          		<execution>
-	            		<phase>package</phase>
-	            		<goals>
-	              			<goal>sign</goal>
-	            		</goals>
-	          		</execution>
-	        	</executions>
-	      	</plugin>
- -->
- 			<plugin>
-		        <groupId>org.apache.maven.plugins</groupId>
-		        <artifactId>maven-shade-plugin</artifactId>
-		        <version>2.4.2</version>
-		        <executions>
-		          <execution>
-		            <phase>package</phase>
-		            <goals>
-		              <goal>shade</goal>
-		            </goals>
-		            <configuration>
-		              <transformers>
-		                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-		                  <mainClass>org.graphast.query.rnn.CompareRNNSearchsMethodsAnalysis</mainClass>
-		                </transformer>
-		              </transformers>
-		            </configuration>
-		          </execution>
-		        </executions>
-		      </plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>2.4.2</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+						<configuration>
+							<transformers>
+								<transformer
+									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+									<mainClass>org.graphast.query.rnn.CompareRNNSearchsMethodsAnalysis</mainClass>
+								</transformer>
+							</transformers>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 </project>
