--- a/core/db.properties
+++ b/core/db.properties
@@ -5,13 +5,13 @@
 # password=aridapostgres12
 
 # remoto - arida novo
-#driver=org.postgresql.Driver
-#host=jdbc:postgresql://200.129.44.238:8080/amc
-#user=postgres
-#password=aridapostgres12
+# driver=org.postgresql.Driver
+# host=jdbc:postgresql://200.129.44.238:8080/amc
+# user=postgres
+# password=aridapostgres12
 
-#local
-driver=org.postgresql.Driver
-host=jdbc:postgresql://localhost:5432/postgres
-user=postgres
-password=senha
+# local
+ driver=org.postgresql.Driver
+ host=jdbc:postgresql://localhost:5432/osm
+ user=postgres
+ password=senha
