--- a/core/db.properties
+++ b/core/db.properties
@@ -1,8 +1,9 @@
 # remoto - arida antigo 
-# driver=org.postgresql.Driver
-# host=jdbc:postgresql://177.130.199.157:8080/fortaleza
-# user=postgres
-# password=aridapostgres12
+ driver=org.postgresql.Driver
+ host=jdbc:postgresql://177.130.199.157:8080/fortaleza
+ user=postgres
+ password= arida1postgis123
+
 
 # remoto - arida novo
 # driver=org.postgresql.Driver
@@ -11,7 +12,7 @@
 # password=aridapostgres12
 
 # local
- driver=org.postgresql.Driver
- host=jdbc:postgresql://localhost:5432/osm
- user=postgres
- password=senha
+ #driver=org.postgresql.Driver
+ #host=jdbc:postgresql://localhost:5432/osm
+ #user=postgres
+ #password=senha
